Subscriptions -> contract view integration
