# cmd/api/docs/swagger.json
@@ -782,63 +782,6 @@
                 }
             }
         },
-        "/contract/{network}/{address}/rating": {
-            "get": {
-                "description": "Get contract rating",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "contract"
-                ],
-                "summary": "Get contract rating",
-                "operationId": "get-contract-rating",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Network",
-                        "name": "network",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "maxLength": 36,
-                        "minLength": 36,
-                        "type": "string",
-                        "description": "KT address",
-                        "name": "address",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/handlers.SubRating"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/contract/{network}/{address}/raw_storage": {
             "get": {
                 "description": "Get contract raw storage",
@@ -2172,15 +2115,15 @@
                 "network": {
                     "type": "string"
                 },
-                "profile": {
-                    "type": "object",
-                    "$ref": "#/definitions/handlers.ProfileInfo"
-                },
                 "project_id": {
                     "type": "string"
                 },
                 "slug": {
                     "type": "string"
+                },
+                "subscription": {
+                    "type": "object",
+                    "$ref": "#/definitions/handlers.Subscription"
                 },
                 "tags": {
                     "type": "array",
@@ -2190,6 +2133,9 @@
                 },
                 "timestamp": {
                     "type": "string"
+                },
+                "totalSubscribed": {
+                    "type": "integer"
                 },
                 "total_withdrawn": {
                     "type": "integer"
@@ -2447,7 +2393,7 @@
                 "operations": {
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "$ref": "#/definitions/handlers.Operation"
                     }
                 }
             }
@@ -2484,14 +2430,6 @@
                     "items": {
                         "$ref": "#/definitions/handlers.TokenTransfer"
                     }
-                }
-            }
-        },
-        "handlers.ProfileInfo": {
-            "type": "object",
-            "properties": {
-                "subscribed": {
-                    "type": "boolean"
                 }
             }
         },
@@ -2648,10 +2586,6 @@
                 "network": {
                     "type": "string"
                 },
-                "profile": {
-                    "type": "object",
-                    "$ref": "#/definitions/handlers.ProfileInfo"
-                },
                 "project_id": {
                     "type": "string"
                 },
@@ -2660,6 +2594,10 @@
                 },
                 "slug": {
                     "type": "string"
+                },
+                "subscription": {
+                    "type": "object",
+                    "$ref": "#/definitions/handlers.Subscription"
                 },
                 "tags": {
                     "type": "array",
@@ -2670,6 +2608,9 @@
                 "timestamp": {
                     "type": "string"
                 },
+                "totalSubscribed": {
+                    "type": "integer"
+                },
                 "total_withdrawn": {
                     "type": "integer"
                 },
@@ -2678,28 +2619,41 @@
                 }
             }
         },
-        "handlers.SubRating": {
+        "handlers.Subscription": {
             "type": "object",
             "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/handlers.SubRatingUser"
-                    }
-                }
-            }
-        },
-        "handlers.SubRatingUser": {
-            "type": "object",
-            "properties": {
-                "avatarURL": {
+                "address": {
                     "type": "string"
                 },
-                "login": {
+                "alias": {
                     "type": "string"
+                },
+                "network": {
+                    "type": "string"
+                },
+                "subscribed_at": {
+                    "type": "string"
+                },
+                "watch_calls": {
+                    "type": "boolean"
+                },
+                "watch_deployed": {
+                    "type": "boolean"
+                },
+                "watch_deployments": {
+                    "type": "boolean"
+                },
+                "watch_errors": {
+                    "type": "boolean"
+                },
+                "watch_migrations": {
+                    "type": "boolean"
+                },
+                "watch_same": {
+                    "type": "boolean"
+                },
+                "watch_similar": {
+                    "type": "boolean"
                 }
             }
         },
